--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,4 +20,5 @@ jobs:
           script: |
             cd /var/www/html/nemonode
             git pull origin main
-            npm build
+            npm i
+            
