--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-"LIVE_SERVER":"http://localhost:4000/",
-"LOCAL_SERVER":"http://localhost:4000/"
+"LIVE_SERVER":"https://nemo.ivistaz.co/",
+"LOCAL_SERVER":"https://nemo.ivistaz.co/"
 
 
 }
