--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,5 +20,6 @@ jobs:
           script: |
             cd /var/www/html/nemonode
             git pull origin main
+            pm2 restart 0
             
             
