agent dashboard fix

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,7 @@ __pycache__
 compile_commands.json
 views/public/html/hey.html
 views/public/html/hey1.html
+views/public/html/space.mp4
+.gitignore
+views/public/html/hey1.png
+.gitignore
